Resuelve conflictos de fusión

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=foro
+spring.datasource.url=jdbc:postgresql://localhost/foroHub
+spring.datasource.username=postgres
+spring.datasource.password=ABA98D3A*
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
